# SumVox

./: .env.example  .gitignore  CHANGELOG.md  CHANGELOG_config_fixes.md  CHANGELOG_config_refactor.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  HOOK_IMPROVEMENTS.md  IMPLEMENTATION_SUMMARY.md  PHASE7_IMPLEMENTATION.md  PROVIDER_FALLBACK_FIX.md  QUICKSTART.md  README.md  RELEASE_VALIDATION_REPORT.md  RELEASING.md  RUST_REWRITE.md  TDD_CREDENTIALS_SUMMARY.md  TDD_SUMMARY.md  build.rs  justfile  pyproject.toml  test_hooks.sh
.agents/: README.md  config.yml  create_tasks.js  goal.md  hive-state.json  lib.js  package.json  states.yml
.cargo/: config.toml
.claude-plugin/: plugin.json
.claude/hooks/: __init__.py  llm_adapter.py  requirements.txt  run_sumvox_hook.sh  run_voice_hook.sh  summarizer.py  voice_config.json  voice_config.py  voice_config.schema.json  voice_engine.py  voice_notification.py
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  claude-code-review.yml  release.yml
config/: e2e_test.toml.example  recommended.json  recommended.toml  recommended.yaml
docs/: RELEASE_QUICK_START.md  RUST_REWRITE_PLAN.md  ollama-setup.md
docs/design/: agent-aggregator.md  openab-aggregator.md
examples/: HOOK_SETUP.md  claude_settings_example.json  sample_stop_events.json  test_hook.sh
homebrew/: sumvox.rb
hooks/: hooks.json
menubar/: SumVoxMenu.swift
prototype/: orb-canvas.html
scripts/: test_hooks.sh
src/: cli.rs  config.rs  credentials.rs  error.rs  lib.rs  main.rs  notify_log.rs  provider_factory.rs  queue.rs  transcript.rs  voice.rs
src/audio/: afplay.rs  file.rs  mod.rs  normalize.rs  wav_header.rs
src/hooks/: claude_code.rs  mod.rs
src/llm/: anthropic.rs  cost_tracker.rs  gemini.rs  mod.rs  ollama.rs  openai.rs
src/tts/: cloud_tts.rs  cloud_tts_auth.rs  elevenlabs.rs  google.rs  macos.rs  mod.rs  openai.rs  xai.rs
tests/: e2e.rs  test_integration.py  test_llm_adapter.py  test_summarizer.py  test_voice_engine.py  test_voice_notification.py
