[project]
name = "claude-voice-notification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "litellm>=1.79.3",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "mypy>=1.18.2",
    "pylint>=4.0.2",
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
]
